changed font style through google api, fixed un aligned menu bar with ehader colour. added padding/margins

--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -16,8 +16,20 @@
 
 
 .content{
-	margin:40px;
+	margin:20px 0px 0px 0px;
+	padding:10px 20px 40px 40px;
+	background-color:#d9d9d9;
 }
+
+.header-background{
+	padding:15px;
+	background-color:#d9d9d9;
+}
+
+* {
+	font-family: 'ZCOOL XiaoWei', serif;
+}
+
 
 #menubar ul {
   list-style-type: none;
@@ -32,6 +44,10 @@
 #menubar li {
   float: left;
   border-right: 1px solid #ffffff;
+}
+
+#menubar li.last{
+	border-right: 0px solid #ffffff; !important;
 }
 
 #menubar li.mnuright {
